--- a/002_ImplicitThreads/002_ImplicitThreads/Base.lproj/Main.storyboard
+++ b/002_ImplicitThreads/002_ImplicitThreads/Base.lproj/Main.storyboard
@@ -24,9 +24,18 @@
                                     <action selector="implicitThread:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cxU-dd-Fin"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tt1-uI-GqM">
+                                <rect key="frame" x="52" y="124" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="Tt1-uI-GqM" id="g7G-Ex-pii"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
